# retrolauncher2

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
retrolauncher/: browse.py  common_widgets.py  input.py  retrolauncher.py  stats.py  stats_view.py
retrolauncher/config/: retrolauncher.toml  sys_apps.toml
retrolauncher/themes/: default.toml
