[tool.poetry]
name = "retrolauncher"
version = "0.3.0"
description = ""
authors = ["valadaa48 <valadaa48@gmx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
urwid = "^2.1.0"
toml = "^0.10.1"
evdev = "^1.3.0"
cachetools = "^4.1.0"
humanize = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.0"

[tool.poetry.scripts]
retrolauncher = "retrolauncher.retrolauncher:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

